<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="back">&lt;=</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_addition">+</string>
    <string name="button_substract">-</string>
    <string name="button_multi">×</string>
    <string name="button_division">÷</string>
    <string name="button_equal">=</string>
    <string name="button_power">^</string>
    <string name="button_clear">C</string>
    <string name="button_point">.</string>
    <string name="button_plusMinus">±</string>
    <string name="button_left_parenthesis">(</string>
    <string name="button_right_parenthesis">)</string>
    <string name="button_backspace"> </string>

    <string name="calculator_text">Enter a value</string>
</resources>