<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/calculatorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:inputType="none"
        tools:ignore="LabelFor"
        android:text="@string/calculator_text"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/buttonsTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorText"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/button_clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#DD2C00"
                android:text="@string/button_clear"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/button_parenthesis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_parenthesis"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />

            <android.widget.Button
                android:id="@+id/button_power"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_power"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />

            <android.widget.Button
                android:id="@+id/button_division"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_division"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/button_7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/button_7"
                android:textSize="24sp"
                android:textColor="#FFFFFF" />

            <android.widget.Button
                android:id="@+id/button_8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_8"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp"/>

            <android.widget.Button
                android:id="@+id/button_9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_9"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />

            <android.widget.Button
                android:id="@+id/button_multi"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_multi"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/button_4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_4"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp"/>

            <android.widget.Button
                android:id="@+id/button_5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_5"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />

            <android.widget.Button
                android:id="@+id/button_6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_6"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp"/>

            <android.widget.Button
                android:id="@+id/button_substract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_substract"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/button_1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"

                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_1"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp"/>

            <android.widget.Button
                android:id="@+id/button_2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_2"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp"/>

            <android.widget.Button
                android:id="@+id/button_3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_3"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />

            <android.widget.Button
                android:id="@+id/button_addition"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_addition"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/button_plusminus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_plusMinus"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp"/>

            <android.widget.Button
                android:id="@+id/button_0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_0"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />

            <android.widget.Button
                android:id="@+id/button_dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_point"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_margin="5dp" />

            <android.widget.Button
                android:id="@+id/button_equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button_equal"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:backgroundTint="#43A047"
                android:layout_margin="5dp" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/button_backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:contentDescription="@string/button_backspace"
        android:textColor="#000000"
        android:background="@drawable/circle"
        app:srcCompat="@drawable/backspace"
        app:layout_constraintBottom_toTopOf="@+id/buttonsTableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>